# ai-agent-playground

./: .gitignore  README.md  main.py  pyproject.toml
google-adk/: README.md
google-adk/my_agent/: agent.py
langchain/: README.md  ollama-integration.py
langchain/my_agent/: agent.py
langchain/work-flow/: .env.sample  agent-with-airbnb-mcp.py  agent-with-memory-HITL.py  agent.py
ms-autogen/: README.md  ollama-integration.py
ms-autogen/my_agent/: agent.py
